data/derived/comb/progs/unify/prog6976.ml.out
Characters 67-69:
  in wwhile (f gs, b);;
               ^^
Error: This expression has type int -> int * bool
       but an expression was expected of type int
